ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apitec
spec:
  rules:
  - host: api.etovar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: apitec
            port:
              number: 80
